--- a/packages/toolkit/components/input/_input.scss
+++ b/packages/toolkit/components/input/_input.scss
@@ -60,11 +60,11 @@
   width: 100%;
 
   &:hover:not(:disabled, .ofh-input--error) {
-    border-width: $ofh-stroke-weight-4;
+    @include ofh-emphasised-input-border($ofh-color-border-input-default);
   }
 
   &:active:not(:disabled, .ofh-input--error) {
-    border: $ofh-stroke-weight-4 solid $ofh-color-border-input-active;
+    @include ofh-emphasised-input-border($ofh-color-border-input-active);
   }
 
   &:focus {
@@ -84,7 +84,7 @@
 }
 
 .ofh-input--error {
-  border: $ofh-stroke-weight-4 solid $ofh-color-border-feedback-error;
+  @include ofh-emphasised-input-border($ofh-color-border-feedback-error);
 }
 
 // The ex measurements are based on the number of W's that can fit inside the input
