--- a/packages/toolkit/components/select/_select.scss
+++ b/packages/toolkit/components/select/_select.scss
@@ -19,11 +19,11 @@
   width: 100%;
 
   &:hover:not(:disabled, .ofh-select--error) {
-    border-width: $ofh-stroke-weight-4;
+    @include ofh-emphasised-input-border($ofh-color-border-input-default);
   }
 
   &:active:not(:disabled, .ofh-select--error) {
-    border: $ofh-stroke-weight-4 solid $ofh-color-border-input-active;
+    @include ofh-emphasised-input-border($ofh-color-border-input-active);
   }
 
   &:focus {
@@ -52,5 +52,5 @@
 }
 
 .ofh-select--error {
-  border: $ofh-stroke-weight-4 solid $ofh-color-border-feedback-error;
+  @include ofh-emphasised-input-border($ofh-color-border-feedback-error);
 }
